login sayfasi eklendi
login sayfasi eklendi, logout henuz yapilmadi, db deki son tablo
degisikliklerine gore entity modeli yenilendi

--- a/dersprogrami/dersprogrami/Web.config
+++ b/dersprogrami/dersprogrami/Web.config
@@ -14,9 +14,7 @@
     </sectionGroup>
   </configSections>
   <appSettings />
-  <connectionStrings>
-    <add name="SyllabusDbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql02.turhost.com;initial catalog=SyllabusDb;persist security info=True;user id=semihduran;password=5t4r3e2w1q;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+
   <system.web>
     <compilation debug="true">
       <assemblies>
@@ -84,4 +82,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings><add name="SyllabusDbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=mssql02.turhost.com;Initial Catalog=SyllabusDb;Persist Security Info=True;User ID=fatihgultekin;Password=5t4r3e2w1q;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
