ogretim elemanlari sutunu düzenlendi. silme islemi eklendi.

--- a/dersprogrami/dersprogrami/Web.config
+++ b/dersprogrami/dersprogrami/Web.config
@@ -53,6 +53,13 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <defaultDocument enabled="true">
+      <files>
+        <clear />
+        <add value="Login.aspx" />
+        <add value="Default.aspx" />
+      </files>
+    </defaultDocument>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ScriptModule" />
@@ -82,4 +89,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings><add name="SyllabusDbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=mssql02.turhost.com;Initial Catalog=SyllabusDb;Persist Security Info=True;User ID=fatihgultekin;Password=5t4r3e2w1q;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="SyllabusDbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=mssql02.turhost.com;Initial Catalog=SyllabusDb;Persist Security Info=True;User ID=fatihgultekin;Password=5t4r3e2w1q;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="SyllabusDbEntities1" connectionString="metadata=res://*/HocaModel.csdl|res://*/HocaModel.ssdl|res://*/HocaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=mssql02.turhost.com;Initial Catalog=SyllabusDb;User ID=semihduran;Password=5t4r3e2w1q;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="HocaModel" connectionString="metadata=res://*/HocaModel.csdl|res://*/HocaModel.ssdl|res://*/HocaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=mssql02.turhost.com;Initial Catalog=SyllabusDb;User ID=semihduran;Password=5t4r3e2w1q;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
